--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 
 </head>
 <body>
-<div id="root">
-    <%- content %>
-</div>
+<div id="root"><%- content %></div>
 <script src="bundle.js"></script>
 </body>
 </html>
