--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>React Isomorphic</title>
-
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <div id="root"><%- content %></div>
