--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div id="root"><%- content %></div>
+<div id="root"><div><%- content %></div></div>
 <script src="bundle.js"></script>
 </body>
 </html>
