--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>React Isomorphic</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+<script>
+    var INITIAL_STATE = <%- initialState %>;
+</script>
 <body>
 <div id="root"><div><%- content %></div></div>
 <script src="bundle.js"></script>
