--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>React Isomorphic</title>
-    <link rel="stylesheet" href="/public/styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <script>
     var INITIAL_STATE = <%- initialState %>;
 </script>
 <body>
-<div id="root"><div><%- content %></div></div>
-<script src="/public/bundle.js"></script>
+<div id="root"><%- content %></div>
+<script src="/bundle.js"></script>
 </body>
 </html>
