--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>React Isomorphic</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 <script>
     var INITIAL_STATE = <%- initialState %>;
