implemented php rendering added new homepage template with rotating blocks in threejs added rxjs for frontend

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </script>
 <body>
 <div id="root"><%- content %></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.0.1/Rx.min.js"></script>
 <script src="/bundle.js"></script>
 </body>
 </html>
